Kubernetes/my-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: apibike-deployment
  labels:
    app: apibike
spec:
  replicas: 3
  selector:
    matchLabels:
      app: apibike
  template:
    metadata:
      labels:
        app: apibike
    spec:
      containers:
      - name: fastapi_from_compose
        image: bourrich/apibike_image:latest
        ports:
        - containerPort: 8000
      - name: prediction_from_compose
        image: bourrich/prediction:latest
      - name: users_from_compose
        image:bourrich/users:latest
      - name: authentication_from_compose
          image:bourrich/autentification:latest
